# fastapi-get-recipes-api

./: .env.exemple  .gitignore  README.md  create_app.py  docker-compose.yaml  main.py  pyproject.toml
alembic/versions/: 0db52585b916_create_products_and_recipes_table.py  0df20192e2ef_initial_migration.py  17cde06b9a82_create_access_token_table.py  4a0b0e78780d_create_products_and_recipes_table.py  67fd178b4ef4_create_tables.py  b00b653f8eff_create_users_tables.py  e4ca018a1b25_fix_property.py  f230c949ca2a_create_profiles_table.py
api/api_v1/: auth.py  products.py  profile.py  recipes.py
api/dependencies/: backend.py  strategy.py  user_manager.py
api/routers/: __init__.py  auth.py  fastapi_users_routers.py
core/: config.py
core/auth/: user_manager.py
core/authentication/: transport.py  user_manager.py
core/db/: db_helper.py
core/models/: __init__.py  access_token.py  user.py
core/schemas/: user.py
models/: __init__.py  comment.py  product.py  product_category.py  profile.py  recipe_category_association.py  recipe_product_association.py  recipes.py  recipes_category.py  user.py
models/mixins/: __init__.py  created_at.py  id_name.py  id_title.py  int_id_pk.py  updated_at.py
repositories/: __init__.py  base_repository.py  mixins_repository.py  product.py  profile.py  recipes.py  sqlalchemy_repository.py
schemas/: __init__.py  autor.py  base_schemas.py  comment.py  meta.py  product.py  profile.py  recipe_category.py  recipes.py  review.py
services/: __init__.py  base_services.py  mixins_services.py  product.py  profile.py  recipe.py
(+32 files in other folders)
