[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["GrinevArtem <artemgrinyov90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.112.0"}
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
pydentic = "^0.0.1.dev3"
pydantic-settings = "^2.4.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
